# MDVoxelSegmentation

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Cluster_mutations.npy  HISTORY.rst  LICENSE  MDVoxelClustering.py  MDclustering.ipynb  MDclustering.py  Makefile  README  README.md  README.rst  Visualization_data.npy  clustering_3d_0.6_beta.html  clustering_3d_0.6_beta.py  git_syncing.txt  requirements.txt  run_ding.py  settests.py  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
actual_module/: __init__.py  antidisco.py  clustering.py  leaflets.py  settests.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example_inputs/: clustering_input.py  selections.inp  vmd_clusters_visualization.py  vmd_clusters_visualization.vmd
leaflets/: clustering_example.py  leaflets.py
mdvoxelclustering/: __init__.py  antidisco.py  argparser.py  clustering.py  do_segmentation.py  graphing.py  leaflets.py  plotting.py  settests.py
mdvoxelclustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mdvoxelsegmentation/: __init__.py  argparser.py  clustering.py  do_segmentation.py  graphing.py  leaflets.py  plotting.py  settests.py
requirements/: dev.txt  test.txt
src/mdvoxelsegmentation/: __init__.py  argparser.py  clustering.py  do_segmentation.py  identity.py  leaflets.py  plotting.py  settests.py  vmd_clusters_visualization.vmd
src/mdvoxelsegmentation/templates/: lipid_flip-flop.html  lipid_flip-flop.ipynb  vmd_clusters_visualization.py
tests/: test_clustering.gro  test_clustering.py  test_mdvoxelclustering.py
tests/test_leaflets/: bilayer.vmd  bilayer_clustered.vmd  clustering_input.py  clusters.npy  test_bilayer.gro  test_bilayer_insane-log.txt  test_leaflets.py
tests/test_settests/: conftest.py  test_settests.py
(+4 files in other folders)
