[bumpversion]
current_version = 1.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:mdvoxelclustering/__init__.py]

[wheel]
universal = 1

[metadata]
name = MDVoxelSegmentation
version = 1.1.0
author = BMH Bruininks
author_email = bartbruininks@gmail.com
description = Voxel based labeling of (amphipathic) MD systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marrink-lab/MDVoxelSegmentation
project_urls =
    Bug Tracker = https://github.com/marrink-lab/MDVoxelSegmentation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = mdvoxelsegmentation
packages = find:
python_requires = >=3.6
install-requires = 
	numpy
	MDAnalysis
	matplotlib
	psutil	

[options.packages.find]
where = mdvoxelsegmentation
