[metadata]
name = mdvoxelsegmentation
version = 1.1.6
author = BMH Bruininks
author_email = bartbruininks@gmail.com
description = Leaflet segmentation of lipids or other amphipathic molecules of olecular dynamics stuctures and trajectories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marrink-lab/MDVoxelSegmentation
project_urls =
    Bug Tracker = https://github.com/marrink-lab/MDVoxelSegmentation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy
	MDAnalysis
	psutil
	matplotlib

[options.packages.find]
where = src

